--- a/plugins/SegmentEditor/stylesheets/segmentation.less
+++ b/plugins/SegmentEditor/stylesheets/segmentation.less
@@ -549,3 +549,7 @@ a.metric_category {
 .segment-element .segment-footer a {
     color: @theme-color-link !important;
 }
+
+.enable_all_users, .visible_to_website, .auto_archive {
+    display: inline-block;
+}
