--- a/plugins/Morpheus/templates/demo.twig
+++ b/plugins/Morpheus/templates/demo.twig
@@ -335,7 +335,7 @@
 </div>
 <div piwik-field uicontrol="multiselect" name="phonenumbers"
      data-title="Phone numbers"
-     value="1"
+     value="[1]"
      inline-help="Multi select"
      options='{1: "0123456789",2:"9876543210",3:"5432109876"}'>
 </div>
