Fix some tests.

--- a/plugins/Morpheus/stylesheets/general/_forms.less
+++ b/plugins/Morpheus/stylesheets/general/_forms.less
@@ -100,6 +100,20 @@ input:not([type]):focus:not([readonly]),
  input[type=tel]:focus:not([readonly]),
  input[type=number]:focus:not([readonly]),
  input[type=search]:focus:not([readonly]),
+ textarea.materialize-textarea:focus:not([readonly]),
+
+ input:not([type]):focus:not([readonly]),
+ input[type=text]:not(.browser-default):focus:not([readonly]),
+ input[type=password]:not(.browser-default):focus:not([readonly]),
+ input[type=email]:not(.browser-default):focus:not([readonly]),
+ input[type=url]:not(.browser-default):focus:not([readonly]),
+ input[type=time]:not(.browser-default):focus:not([readonly]),
+ input[type=date]:not(.browser-default):focus:not([readonly]),
+ input[type=datetime]:not(.browser-default):focus:not([readonly]),
+ input[type=datetime-local]:not(.browser-default):focus:not([readonly]),
+ input[type=tel]:not(.browser-default):focus:not([readonly]),
+ input[type=number]:not(.browser-default):focus:not([readonly]),
+ input[type=search]:not(.browser-default):focus:not([readonly]),
  textarea.materialize-textarea:focus:not([readonly]) {
   border-bottom-color: @theme-color-brand;
   box-shadow: 0 1px 0 0 @theme-color-brand;
