--- a/plugins/CoreAdminHome/templates/optOut.twig
+++ b/plugins/CoreAdminHome/templates/optOut.twig
@@ -45,7 +45,15 @@
         <p id="textOptOut" {% if not trackVisits %}style="display:none"{% endif %}>
             {{ 'CoreAdminHome_YouMayOptOut2'|translate }} {{ 'CoreAdminHome_YouMayOptOut3'|translate }}
         </p>
-        <p id="textError" style="display:none; color: red; font-weight: bold;" %}>
+
+        <p id="textError_cookies" style="display:none; color: red; font-weight: bold;" %}>
+            {{ 'CoreAdminHome_OptOutErrorNoCookies'|translate }}
+        </p>
+        <p id="textError_https" style="display:none; color: red; font-weight: bold;" %}>
+            {{ 'CoreAdminHome_OptOutErrorNotHttps'|translate }}
+        </p>
+        <p id="textError_domains" style="display:none; color: red; font-weight: bold;" %}>
+            {{ 'CoreAdminHome_OptOutErrorDifferentDomains'|translate }}
         </p>
 
     {% if showConfirmOnly %}</noscript>{% endif %}
