--- a/plugins/CoreAdminHome/templates/optOut.twig
+++ b/plugins/CoreAdminHome/templates/optOut.twig
@@ -52,8 +52,8 @@
         <p id="textError_https" style="display:none; color: red; font-weight: bold;" %}>
             {{ 'CoreAdminHome_OptOutErrorNotHttps'|translate }}
         </p>
-        <p id="textError_domains" style="display:none; color: red; font-weight: bold;" %}>
-            {{ 'CoreAdminHome_OptOutErrorDifferentDomains'|translate }}
+        <p id="textError_popupBlocker" style="display:none; color: red; font-weight: bold;" %}>
+            {{ 'CoreAdminHome_OptOutErrorWindowOpen'|translate }}
         </p>
 
     {% if showConfirmOnly %}</noscript>{% endif %}
