try to fix tests

--- a/plugins/CoreVisualizations/templates/_dataTableViz_htmlTable_ratio.twig
+++ b/plugins/CoreVisualizations/templates/_dataTableViz_htmlTable_ratio.twig
@@ -7,13 +7,29 @@
         {% set siteTotal = 0 %}
     {% endif %}
 
-    {% set rowPercentage = row.getMetadata(column ~ '_row_percentage') %}
+    {% if rowPercentage|default is empty %}
+        {% if row.getMetadata(column ~ '_row_percentage') != false %}
+            {% set rowPercentage = row.getMetadata(column ~ '_row_percentage') %}
+        {% elseif row.getColumn(column)|default(0) is numeric and reportTotal is numeric %}
+            {% set rowPercentage = row.getColumn(column)|percentage(reportTotal, 1) %}
+        {% else %}
+            {% set rowPercentage = '' %} {# should not happen #}
+        {% endif %}
+    {% endif %}
+
     {% set metricTitle   = translations[column]|default(column) %}
 
     {% set reportRatioTooltip = 'General_ReportRatioTooltip'|translate(label, rowPercentage|e('html_attr'), reportTotal|e('html_attr'), metricTitle|e('html_attr'), '"' ~ segmentTitlePretty ~ '"', translations[labelColumn]|default(labelColumn)|e('html_attr')) %}
 
-    {% if row.getMetadata(column ~ '_site_total_percentage') != false %}
-        {% set totalPercentage   = row.getMetadata(column ~ '_site_total_percentage') %}
+    {% if totalPercentage|default is empty %}
+        {% if row.getMetadata(column ~ '_site_total_percentage') != false %}
+            {% set totalPercentage = row.getMetadata(column ~ '_site_total_percentage') %}
+        {% elseif row.getColumn(column)|default(0) is numeric and siteTotal is numeric %}
+            {% set totalPercentage = row.getColumn(column)|percentage(siteTotal, 1) %}
+        {% endif %}
+    {% endif %}
+
+    {% if totalPercentage|default is not empty %}
         {% set totalRatioTooltip = 'General_TotalRatioTooltip'|translate(totalPercentage, siteTotal|number(2,0), metricTitle, periodTitlePretty) %}
     {% else %}
         {% set totalRatioTooltip = '' %}
@@ -21,5 +37,5 @@
 
     <span class="ratio"
           title="{{ reportRatioTooltip|rawSafeDecoded|raw }} {{ totalRatioTooltip|rawSafeDecoded|e('html_attr') }}{% if tooltipSuffix|default is not empty %}<br/><br/> {{ tooltipSuffix|rawSafeDecoded|e('html_attr') }}{% endif %}"
-    >&nbsp;{{ rowPercentage }} {% if changePercantage|default is not empty %}({{ changePercentage }}){% endif %}</span>
+    >&nbsp;{{ rowPercentage }} {% if changePercentage|default is not empty %}({{ changePercentage }}){% endif %}</span>
 {%- endif %}
