--- a/plugins/UsersManager/templates/userSecurity.twig
+++ b/plugins/UsersManager/templates/userSecurity.twig
@@ -7,7 +7,7 @@
     <div piwik-content-block content-title="{{ 'General_ChangePassword'|translate|e('html_attr') }}" feature="true">
         <form id="userSettingsTable" method="post" action="{{ linkTo({'module': 'UsersManager', 'action': 'recordPasswordChange'}) }}">
 
-            <input type="hidden" value="{{ nonce }}" name="nonce">
+            <input type="hidden" value="{{ changePasswordNonce|e('html_attr') }}" name="nonce">
 
             {% if isValidHost is defined and isValidHost %}
 
@@ -48,4 +48,59 @@
 
     {{ postEvent('Template.userSecurity.afterPassword') }}
 {% endif %}
+    <div piwik-content-block content-title="Auth tokens">
+        <p>
+            Tokens you have generated can be used to access the Matomo reporting API, Matomo tracking API, and exported
+            Matomo widgets and have the same permissions as your regular user login.
+        </p>
+        <table piwik-content-table>
+            <thead>
+            <tr>
+                <th>Description</th>
+                <th>Last used</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% if tokens is empty %}
+            <tr>
+                <td colspan="3">No token created yet, <a href="{{ linkTo({'module': 'UsersManager', 'action': 'addNewToken'}) }}">create a new token now</a>.</td></tr>
+            {% else %}
+                {% for token in tokens %}
+                    <tr>
+                        <td>{{ token.description }}</td>
+                        <td>{{ token.last_used|prettyDate }}</td>
+                        <td>
+
+                            <form method="post" action="{{ linkTo({'module': 'UsersManager', 'action': 'deleteToken'}) }}" style="display: inline">
+                                <input name="nonce" type="hidden" value="{{ deleteTokenNonce|e('html_attr')  }}">
+                                <input name="id_token_auth" type="hidden" value="all">
+                                <a href=""
+                                   class="table-action icon-delete"
+                                   title="{{ 'General_Delete'|translate }}"
+                                ></a>
+                            </form>
+
+                        </td>
+                    </tr>
+                {% endfor %}
+            {% endif %}
+            </tbody>
+        </table>
+
+        <div class="tableActionBar">
+            <a href="{{ linkTo({'module': 'UsersManager', 'action': 'addNewToken'}) }}">
+                <span class="icon-add"></span>
+                Create new token
+            </a>
+            <form method="post" action="{{ linkTo({'module': 'UsersManager', 'action': 'deleteToken'}) }}" style="display: inline">
+                <input name="nonce" type="hidden" value="{{ deleteTokenNonce|e('html_attr')  }}">
+                <input name="id_token_auth" type="hidden" value="all">
+                <span class="icon-delete"></span> Delete all tokens
+            </form>
+        </div>
+
+    </div>
+
+
 {% endblock %}
