--- a/plugins/UsersManager/templates/userSecurity.twig
+++ b/plugins/UsersManager/templates/userSecurity.twig
@@ -53,29 +53,36 @@
     <div piwik-content-block content-title="Auth tokens">
         <p>
             {{ 'UsersManager_TokenAuthIntro'|translate }}
-            Tokens with an expire date will be deleted automatically.
+            {% if hasTokensWithExpireDate %}{{ 'UsersManager_ExpiredTokensDeleteAutomatically'|translate }}{% endif %}
         </p>
         <table piwik-content-table>
             <thead>
             <tr>
-                <th>Description</th>
-                <th>Last used</th>
-                <th>Expire data</th>
-                <th>Actions</th>
+                <th>{{ 'General_CreationDate'|translate }}</th>
+                <th>{{ 'General_Description'|translate }}</th>
+                <th>{{ 'UsersManager_LastUsed'|translate }}</th>
+                {% if hasTokensWithExpireDate %}<th title="{{ 'UsersManager_TokensWithExpireDateCreationBySystem'|translate|e('html_attr') }}">{{ 'UsersManager_ExpireDate'|translate }}</th>{% endif %}
+                <th>{{ 'General_Actions'|translate }}</th>
             </tr>
             </thead>
             <tbody>
             {% if tokens is empty %}
             <tr>
-                <td colspan="3">No token created yet, <a href="{{ linkTo({'module': 'UsersManager', 'action': 'addNewToken'}) }}">create a new token now</a>.</td></tr>
+                <td colspan="{% if hasTokensWithExpireDate %}5{% else %}4{% endif %}">
+                    {{ 'UsersManager_NoTokenCreatedYetCreateNow'|translate('<a href="' ~ (linkTo({'module': 'UsersManager', 'action': 'addNewToken'})|e('html_attr'))~ '">', '</a>')|raw }}
+                </td></tr>
             {% else %}
                 {% for theToken in tokens %}
                     <tr>
+                        <td>{{ theToken.date_created }}</td>
                         <td>{{ theToken.description }}</td>
-                        <td>{% if theToken.last_used %}{{ theToken.last_used|prettyDate }}{% else %}{{ 'General_Never'|translate }}{% endif %}</td>
-                        <td>{% if theToken.date_expired %}{{ theToken.date_expired|prettyDate }}{% else %}{{ 'General_Never'|translate }}{% endif %}</td>
+                        <td>{% if theToken.last_used %}{{ theToken.last_used }}{% else %}{{ 'General_Never'|translate }}{% endif %}</td>
+                        {% if hasTokensWithExpireDate %}
+                            <td title="{{ 'UsersManager_TokensWithExpireDateCreationBySystem'|translate|e('html_attr') }}">
+                            {% if theToken.date_expired %}{{ theToken.date_expired }}{% else %}{{ 'General_Never'|translate }}{% endif %}
+                            </td>
+                        {% endif %}
                         <td>
-
                             <form method="post" action="{{ linkTo({'module': 'UsersManager', 'action': 'deleteToken'}) }}" style="display: inline">
                                 <input name="nonce" type="hidden" value="{{ deleteTokenNonce|e('html_attr')  }}">
                                 <input name="idtokenauth" type="hidden" value="{{ theToken.idusertokenauth|e('html_attr') }}">
@@ -84,7 +91,6 @@
                                     <span class="icon-delete"></span>
                                 </button>
                             </form>
-
                         </td>
                     </tr>
                 {% endfor %}
@@ -93,9 +99,9 @@
         </table>
 
         <div class="tableActionBar">
-            <a href="{{ linkTo({'module': 'UsersManager', 'action': 'addNewToken'}) }}">
+            <a href="{{ linkTo({'module': 'UsersManager', 'action': 'addNewToken'})|e('html_attr') }}">
                 <span class="icon-add"></span>
-                Create new token
+               {{ 'UsersManager_CreateNewToken'|translate }}
             </a>
 
             {% if tokens is not empty %}
@@ -104,7 +110,7 @@
                 <input name="idtokenauth" type="hidden" value="all">
                 <button type="submit" class="table-action"
                         title="{{ 'General_Delete'|translate }}">
-                    <span class="icon-delete"></span> Delete all tokens
+                    <span class="icon-delete"></span> {{ 'UsersManager_DeleteAllTokens'|translate }}
                 </button>
             </form>
             {% endif %}
