--- a/plugins/UsersManager/templates/addNewTokenSuccess.twig
+++ b/plugins/UsersManager/templates/addNewTokenSuccess.twig
@@ -4,14 +4,14 @@
 
 {% block content %}
 
-    <div piwik-content-block content-title="Token successfully generated">
+    <div piwik-content-block content-title="{{ 'UsersManager_TokenSuccessfullyGenerated'|translate|e('html_attr') }}">
         <p>
-            Please store your token securely as you will not be able to access or see the token again.
+            {{ 'UsersManager_PleaseStoreToken'|translate }}
         </p>
         <pre piwik-select-on-focus style="font-size: 40px;"><code>{{ generatedToken }}</code></pre>
 
         <a href="{{ linkTo({'module': 'UsersManager', 'action': 'userSecurity'}) }}" class="btn"
-        >I confirm I copied the token. Go back to security page.</a>
+        >{{ 'UsersManager_ConfirmTokenCopied'|translate }} {{ 'UsersManager_GoBackSecurityPage'|translate }}</a>
     </div>
 
 {% endblock %}
