--- a/plugins/UsersManager/templates/userSecurity.twig
+++ b/plugins/UsersManager/templates/userSecurity.twig
@@ -99,7 +99,7 @@
         </table>
 
         <div class="tableActionBar">
-            <a href="{{ linkTo({'module': 'UsersManager', 'action': 'addNewToken'})|e('html_attr') }}">
+            <a href="{{ linkTo({'module': 'UsersManager', 'action': 'addNewToken'})|e('html_attr') }}" class="addNewToken">
                 <span class="icon-add"></span>
                {{ 'UsersManager_CreateNewToken'|translate }}
             </a>
