--- a/plugins/UsersManager/templates/addNewTokenSuccess.twig
+++ b/plugins/UsersManager/templates/addNewTokenSuccess.twig
@@ -8,7 +8,7 @@
         <p>
             {{ 'UsersManager_PleaseStoreToken'|translate }}
         </p>
-        <pre piwik-select-on-focus style="font-size: 40px;"><code>{{ generatedToken }}</code></pre>
+        <pre piwik-select-on-focus style="font-size: 40px;" class="generatedTokenAuth"><code>{{ generatedToken }}</code></pre>
 
         <a href="{{ linkTo({'module': 'UsersManager', 'action': 'userSecurity'}) }}" class="btn"
         >{{ 'UsersManager_ConfirmTokenCopied'|translate }} {{ 'UsersManager_GoBackSecurityPage'|translate }}</a>
