--- a/plugins/UsersManager/templates/userSettings.twig
+++ b/plugins/UsersManager/templates/userSettings.twig
@@ -92,3 +92,46 @@
 </div>
 
 {% endblock %}
+
+{% if showNewsletterSignup %}
+    <div ng-controller="PersonalSettingsController as personalSettings">
+        <div piwik-content-block id="newsletterSignup"
+             ng-show="personalSettings.showNewsletterSignup"
+             content-title="{{ 'UsersManager_NewsletterSignupTitle'|translate|e('html_attr') }}">
+
+            <div piwik-field uicontrol="checkbox" name="newsletterSignupCheckbox"
+                 ng-model="personalSettings.newsletterSignupCheckbox"
+                 full-width="true"
+                 data-title="{{ 'UsersManager_NewsletterSignupMessage'|translate('<a href="https://matomo.org/privacy-policy/" target="_blank">', '</a>')|e('html_attr') }}"
+            >
+            </div>
+
+            <div piwik-save-button id="newsletterSignupBtn"
+                 onconfirm="personalSettings.signupForNewsletter()"
+                 data-disabled="!personalSettings.newsletterSignupCheckbox"
+                 value="{{ '{{ personalSettings.newsletterSignupButtonTitle }}'|raw }}"
+                 saving="personalSettings.isProcessingNewsletterSignup">
+            </div>
+        </div>
+    </div>
+{% endif %}
+
+<div piwik-plugin-settings mode="user"></div>
+
+<div piwik-content-block
+     content-title="{{ 'UsersManager_ExcludeVisitsViaCookie'|translate|e('html_attr') }}">
+    <p>
+        {% if ignoreCookieSet %}
+            {{ 'UsersManager_YourVisitsAreIgnoredOnDomain'|translate("<strong>", piwikHost, "</strong>")|raw }}
+        {% else %}
+            {{ 'UsersManager_YourVisitsAreNotIgnored'|translate("<strong>","</strong>")|raw }}
+        {% endif %}
+    </p>
+    <span style="margin-left:20px;">
+    <a href='{{ linkTo({'ignoreSalt':ignoreSalt, 'module': 'UsersManager', 'action':'setIgnoreCookie'}) }}#excludeCookie'>&rsaquo; {% if ignoreCookieSet %}{{ 'UsersManager_ClickHereToDeleteTheCookie'|translate }}
+        {% else %}{{'UsersManager_ClickHereToSetTheCookieOnDomain'|translate(piwikHost) }}{% endif %}
+        <br/>
+    </a></span>
+</div>
+
+{% endblock %}
