--- a/plugins/CoreHome/templates/_topBar.twig
+++ b/plugins/CoreHome/templates/_topBar.twig
@@ -30,11 +30,11 @@
         {% set topMenuAction = currentAction %}
     {% endif %}
 
-    {% spaceless %}
+    {% apply spaceless %}
         {% for label,menu in topMenu %}
             <li role="menuitem" class="{{ _self.isActiveItem(menu, topMenuModule, topMenuAction) }}">{{ _self.topMenuItem(label, menu._icon, menu) }}</li>
         {% endfor %}
-    {% endspaceless %}
+    {% endapply %}
 </ul>
 <ul class="side-nav hide-on-large-only" id="mobile-top-menu">
     {% for label,menu in topMenu %}
