--- a/plugins/CorePluginsAdmin/templates/macros.twig
+++ b/plugins/CorePluginsAdmin/templates/macros.twig
@@ -239,7 +239,7 @@
                             <div class="plugin-author">
                                 By
                                     {% if plugin.info.authors is defined -%}
-                                    {% spaceless %}
+                                    {% apply spaceless %}
                                         {% for author in plugin.info.authors if author.name %}
                                             {% if author.homepage is defined %}
                                                 <a title="{{ 'CorePluginsAdmin_AuthorHomepage'|translate }}" href="{{ author.homepage }}" rel="noreferrer noopener" target="_blank">{{ author.name }}</a>
@@ -250,7 +250,7 @@
                                                 ,
                                             {% endif %}
                                         {% endfor %}
-                                    {% endspaceless %}
+                                    {% endapply %}
                                     {%- endif %}.
                             </div>
                         {% endif %}
