--- a/plugins/Marketplace/templates/plugin-details.twig
+++ b/plugins/Marketplace/templates/plugin-details.twig
@@ -175,7 +175,7 @@
                                 <br />
                             {% endif %}
                         </div>
-                        
+
                         {% if plugin.specialOffer is defined and plugin.specialOffer %}<p style="color: green;"><br />{{ plugin.specialOffer }}</p>{% endif %}
 
                         <p><br /></p>
@@ -215,7 +215,7 @@
                                 <dt>{{ 'Marketplace_Authors'|translate }}</dt>
                                 <dd>{% for author in plugin.authors if author.name %}
 
-                                        {% spaceless %}
+                                        {% apply spaceless %}
                                             {% if author.homepage %}
                                                 <a target="_blank" rel="noreferrer noopener" href="{{ author.homepage }}">{{ author.name }}</a>
                                             {% elseif author.email %}
@@ -227,7 +227,7 @@
                                             {% if loop.index < plugin.authors|length %}
                                                 ,
                                             {% endif %}
-                                        {% endspaceless %}
+                                        {% endapply %}
 
                                     {% endfor %}
                                 </dd>
