--- a/plugins/CorePluginsAdmin/templates/macros.twig
+++ b/plugins/CorePluginsAdmin/templates/macros.twig
@@ -240,14 +240,16 @@
                                 By
                                     {% if plugin.info.authors is defined -%}
                                     {% apply spaceless %}
-                                        {% for author in plugin.info.authors if author.name %}
-                                            {% if author.homepage is defined %}
-                                                <a title="{{ 'CorePluginsAdmin_AuthorHomepage'|translate }}" href="{{ author.homepage }}" rel="noreferrer noopener" target="_blank">{{ author.name }}</a>
-                                            {% else %}
-                                                {{ author.name }}
-                                            {% endif %}
-                                            {% if loop.index < plugin.info.authors|length %}
-                                                ,
+                                        {% for author in plugin.info.authors %}
+                                            {% if author.name %}
+                                                {% if author.homepage is defined %}
+                                                    <a title="{{ 'CorePluginsAdmin_AuthorHomepage'|translate }}" href="{{ author.homepage }}" rel="noreferrer noopener" target="_blank">{{ author.name }}</a>
+                                                {% else %}
+                                                    {{ author.name }}
+                                                {% endif %}
+                                                {% if loop.index < plugin.info.authors|length %}
+                                                    ,
+                                                {% endif %}
                                             {% endif %}
                                         {% endfor %}
                                     {% endapply %}
