Show search categroy and count in action tooltip

--- a/plugins/Live/templates/_actionTooltip.twig
+++ b/plugins/Live/templates/_actionTooltip.twig
@@ -5,4 +5,10 @@
 {{ 'General_ColumnGenerationTime'|translate }}: {{ action.generationTime|raw }}{% endif %}
 {%- if action.timeSpentPretty is defined %}
 
-{{ 'General_TimeOnPage'|translate }}: {{ action.timeSpentPretty|raw }}{% endif -%}
+{{ 'General_TimeOnPage'|translate }}: {{ action.timeSpentPretty|raw }}{% endif %}
+{%- if action.siteSearchCategory|default(false) %}
+
+{{ 'Actions_ColumnSearchCategory'|translate }}: {{ action.siteSearchCategory|rawSafeDecoded }}{% endif %}
+{%- if action.siteSearchCount|default(false) %}
+
+{{ 'Actions_ColumnSearchResultsCount'|translate }}: {{ action.siteSearchCount|rawSafeDecoded }}{% endif %}
